<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                tools:context=".MainActivity">

    <ImageView
            android:id="@+id/hero_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/pf_wave_hero"
            android:contentDescription="@null"/>

    <Button
            android:id="@+id/button_debug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_debug_off"
            android:minWidth="88dp"
            android:minHeight="40dp"
            android:onClick="changeDebugStatus"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/button_debug"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/debug_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_debug"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:maxWidth="320dp"
            android:background="#FFF3CD"
            android:padding="8dp"
            android:text="@string/debug_warning"
            android:textColor="#856404"
            android:textSize="12sp"
            android:visibility="invisible"
            tools:visibility="visible"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/pf_logo"
                android:contentDescription="@string/app_name"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button_configure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/btn_primary"
                    android:minWidth="120dp"
                    android:minHeight="48dp"
                    android:onClick="configure"
                    android:text="@string/button_configure"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            <Button
                    android:id="@+id/button_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_primary"
                    android:minWidth="96dp"
                    android:minHeight="48dp"
                    android:onClick="quit"
                    android:text="@string/button_exit"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
